# oasis-dev

./: .gitignore  README.md
src/bluerov_basic/bluerov_basic/: bluerov_basic.py
src/bluerov_md/: package.xml  setup.cfg  setup.py
src/bluerov_md/bluerov_md/: d1_env.py
src/control/: CMakeLists.txt  a.out  test.cpp
src/control/lib/ControllerTemplates/: MemoryDynamics.hpp  PID.hpp  TestController.hpp
src/control/models/: 1d_md.tflite  mountain_car.tflite
src/control/src/: control.cpp
src/core/control/: package.xml
src/core/control/lib/ControllerTemplates/: Controller.hpp  MountainCarController_DeepQ.hpp
src/core/control/models/: 1d_md_v1.tflite  mc_fail_custom.tflite  test.tflite
src/core/human/: CMakeLists.txt
src/core/human/lib/: KeyStrokes.hpp  a.out  test.cpp
src/core/human/src/: human.cpp  main_launch.xml
src/core/master/: CMakeLists.txt  package.xml
src/core/master/lib/Masters/: WaypointReader.hpp  a.out
src/core/paths/: package.xml
src/core/paths/lib/PlannerTemplates/: noPath.h
src/core/slam/src/: slam.cpp
src/dvl_client/: setup.cfg  setup.py
src/dvl_client/dvl_client/: dvl_client.py
src/envd1/: setup.cfg
src/envs/envd1/: package.xml  setup.py
src/envs/envd1/envd1/: envd1.py
src/envs/gym_for_oasis/: package.xml  setup.cfg  setup.py
src/gym_for_oasis/gym_for_oasis/: oasis_gym.py
src/human/: package.xml
src/human/launch/: main_launch.xml
src/master/Waypoints/: master_waypoints.txt
src/master/lib/MasterTemplates/: MasterTemplate.hpp
src/master/lib/Masters/: test.cpp
src/master/src/: master.cpp
src/other/dvl_client/: package.xml
src/paths/: CMakeLists.txt
src/paths/lib/PathPlanners/: A_star.cpp  goPath.cpp
src/paths/lib/PlannerTemplates/: PathPlanner.h  _Astar.h  _goPath.h  _omplRRTConnect.h
src/paths/src/: pathplanner.cpp
src/robot/: CMakeLists.txt  package.xml
src/robot/lib/SimulatorTemplate/: Simulator.hpp  SkipPose.hpp
src/robots/bluerov_basic/: package.xml  setup.cfg  setup.py
src/robots/bluerov_md/bluerov_md/: bluerov_md.py  py_mav_bridge.py
src/robots/robot/src/: robot.cpp
src/slam/: CMakeLists.txt  package.xml
src/srv/srv_interfaces/: CMakeLists.txt  package.xml
src/srv/srv_interfaces/srv/: KeyCommands.srv
src/srv/tutorial_interfaces/: package.xml
src/srv_interfaces/srv/: CreatePath.srv  GoalWaypointReached.srv  GoalWaypointRequest.srv  PathWaypointSend.srv
src/tutorial_interfaces/: CMakeLists.txt
src/tutorial_interfaces/srv/: GoalPose.srv
